Fix navbar z-index

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -14,7 +14,6 @@ body {
 
 .main {
   position: relative;
-  height: 100vh;
 }
 
 header {
@@ -26,7 +25,7 @@ header {
   background: transparent;
   box-shadow: none;
   transition: background 1s ease 0s, box-shadow 1s ease 0s;
-  z-index: 5;
+  z-index: 0;
   height: 72px;
   display: flex;
   align-items: center;
@@ -39,6 +38,10 @@ header {
 .header {
   background: #0079bf;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.header-hidden {
+  z-index: -1;
 }
 
 #logo {
@@ -682,7 +685,7 @@ form {
   position: relative;
   background: #fafbfc;
   z-index: -1;
-  height: calc(100vh - 72px);
+  // height: calc(100vh - 72px);
 }
 
 .board-show-container {
